tests/build/cases/widget_new/when_missing_block.stderr
error: expected a when block expr and properties
 --> cases/widget_new/when_missing_block.rs:6:16
  |
6 |         when *#is_pressed
  |                ^^^^^^^^^^

warning: unused import: `zero_ui::properties::states::is_pressed`
 --> cases/widget_new/when_missing_block.rs:1:5
  |
1 | use zero_ui::properties::states::is_pressed;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
